package com.dogocorp.jpa.model.pagos;

import jakarta.persistence.*;

@Entity
@Table(name = "pago_efectivo")
public class PagoEfectivo extends DetallePago {
}